syntax = "proto3";

package com.example.fitapp.data.prefs;

option java_package = "com.example.fitapp.data.prefs";
option java_multiple_files = true;

// User preferences stored in DataStore
message UserPreferencesProto {
  // Equipment preferences
  repeated string selected_equipment = 1;
  
  // Workout preferences
  bool notifications_enabled = 2;
  int32 default_rest_time_seconds = 3;
  bool sound_enabled = 4;
  bool vibration_enabled = 5;
  
  // Nutrition preferences
  int32 daily_calorie_goal = 6;
  double daily_water_goal_liters = 7;
  bool nutrition_reminders_enabled = 8;
  
  // User profile
  string user_name = 9;
  int32 age = 10;
  double weight_kg = 11;
  double height_cm = 12;
  
  // Achievement preferences
  bool achievement_notifications_enabled = 13;
  
  // App preferences
  string theme_mode = 14; // "light", "dark", "system"
  string language = 15;
  
  // Last sync timestamps (for Health Connect, etc.)
  int64 last_health_connect_sync_millis = 16;
  int64 last_cloud_sync_millis = 17;
  
  // Shopping list preferences
  string shopping_list_sorting_mode = 20; // "SUPERMARKET_LAYOUT", "ALPHABETICAL", etc.
  
  // Migration info
  int32 preferences_version = 18;
  bool migrated_from_shared_prefs = 19;
  
  // User experience settings (migrated from SharedPreferences)
  bool onboarding_completed = 21;
  bool first_launch = 22;
  bool unified_dashboard_shown = 23;
  repeated string features_discovered = 24;
  string app_version_seen = 25;
  
  // Fasting settings (migrated from SharedPreferences)
  bool fasting_enabled = 26;
  int64 fasting_start_time_millis = 27;
  int32 fasting_duration_hours = 28;
  bool fasting_notifications_enabled = 29;
}
